# parallel-cable-kinematics

./: Cargo.toml  LICENSE  README.md  robot_conf.json
src/: kinematics.rs  main.rs  plot.rs
