[package]
name = "pcr_simulation"
version = "0.1.0"
authors = ["sunbl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"
kiss3d = "0.22.1"
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.41"
rand = "0.7.2"
rand_distr = "0.2.2"